more images in slider

--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 	           			</li>
 	          			<li class="splide__slide">
 	          				<img data-splide-lazy="/images/hemi_08.jpg" src="/images/hemi_08.jpg"/>
+	           			</li>
+	           		 	<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_19.jpg" src="/images/hemi_19.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_18.jpg" src="/images/hemi_18.jpg"/>
+	           			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_10.jpg" src="/images/hemi_010.jpg"/>
+	           			</li>	
+	           			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_14.jpg" src="/images/hemi_014.jpg"/>
 	           			</li>	        		
 	           		</ul>
 	     		</div>
@@ -82,6 +94,18 @@
 	           			</li>
 	          			<li class="splide__slide">
 	          				<img data-splide-lazy="/images/hemi_08.jpg" src="/images/hemi_08.jpg"/>
+	           			</li>
+	           			<li class="splide__slide">
+	              			<img data-splide-lazy="/images/hemi_19.jpg" src="/images/hemi_19.jpg"/>
+	          			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_18.jpg" src="/images/hemi_18.jpg"/>
+	           			</li>
+	          			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_10.jpg" src="/images/hemi_010.jpg"/>
+	           			</li>	
+	           			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_14.jpg" src="/images/hemi_014.jpg"/>
 	           			</li>	        		
 	           		</ul>
 	      		</div>
