adding modal html

--- a/index.html
+++ b/index.html
@@ -167,6 +167,25 @@
 	  		</div>
 	  	</section>
 	</main>	
+	<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+	 <div class="modal-content">
+	    <span class="close">&times;</span>
+	    <div class="modalgrid">
+	      <img src="/images/hemilogo.png">
+	      <div class="row-2">
+	        <h1>Pick Your Own Blueberries!</h1>
+	        <h4>Tuesday – Sunday | 9am to 7pm</h4>
+	        
+	        <p>1861 Bramlett Rd. Greensboro, GA 30642 <br>Call ahead of time - Tel: 770-403-7018
+	</p>
+	      </div>
+	      <img src="/images/hemi_06.jpg">
+	    </div>
+	  </div>
+
+	</div>
 	<!-- scripts -->
 	<script type="text/javascript" src="js/splide.min.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
