--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
     			<img src="images/Hector 2.jpg" alt="Hector Buitrago" class="column-2 row-2">
 				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
-    			<img src="images/20160410_183415.jpeg">
-    			<img src="blueberrybuds.jpg">
+    			<img src="images/20160410_183415.jpeg" class="column-2">
     			<img src="images/hemi_24.jpg">
     			<img src="images/hemi_26.jpg" class="column-2">
     			<img src="images/hemi_27.jpg" class="row-2">
