adding card divs for pick your own section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="icon" type="image/png" href="images/blueberry.png">
   <link rel="shortcut icon" type="image/x-icon" href="images/blueberry.png">
 </head>
-
 <body>
 	<header>
 		<section>
@@ -29,7 +28,6 @@
 			</div>
 		</section>
 	</header>
-
 	<main>
 		<section >
 	  		<div id="primary-slider" class="splide">
@@ -113,38 +111,47 @@
 	  	</section>
 	  	<section class="pick-your-own">
 	    	<article>
-	      		<h2>Come by the farm and pick your own!</h2>
-				<p>Pick your own starts in Late May of every year.</p>
-				<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
-				<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
-				<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
-				<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
-				<ul>
+	    		<div class="card">
+		      		<h2>Come by the farm and pick your own!</h2>
+					<p>Pick your own starts in Late May of every year.</p>
+					<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
+					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
+					<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
+					<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
+					
 					<li>Restrooms are available.</li>
 					<li>Refreshments can be purchased.</li>
 					<li>Children must be supervised at all times.</li>
 					<li>Bring containers or bags to take your fruit</li>
-				</ul>
+	    		</div>
+				
 	    </article>
 	    <div class="products">
-	    	<!-- to do = add products with a background image  -->
-			<h2>Products we sell</h2>
-			<li>Fresh Blueberries (end of May thru July)</li>
-			<li>Fresh Muscadine Grapes (Aug-Sept)</li>
-			<li>Fresh Blackberries (May - Aug)</li>
-			<li>Frozen Blueberries</li>
-			<li>Blueberry Preserves</li>
-			<li>Blueberry Syrup</li>
-			<li>Local Honey</li>
-			<li>Blueberry Muffins</li>
-			<li>Blueberry Lemonade</li>
-			<h2>Farmers market we participate in:</h2>
-			<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
-			<h2>Certifications and Memberships</h2>
-			<li><a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a></li>
-			<li><a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a></li>
-			<li><a href="https://georgiagrown.com/">Georgia Grown</a></li>
-			<li><a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a></li>
+	    	<div class="card">
+	    		<div class="media">
+					<h2>Products we sell</h2>
+					<li>Fresh Blueberries (end of May thru July)</li>
+					<li>Fresh Muscadine Grapes (Aug-Sept)</li>
+					<li>Fresh Blackberries (May - Aug)</li>
+					<li>Frozen Blueberries</li>
+					<li>Blueberry Preserves</li>
+					<li>Blueberry Syrup</li>
+					<li>Local Honey</li>
+					<li>Blueberry Muffins</li>
+					<li>Blueberry Lemonade</li>
+	    		</div>
+	    	</div>
+	    	<div class="card">
+				<h2>Farmers market we participate in:</h2>
+				<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
+	    	</div>
+	    	<div class="card">
+				<h2>Certifications and Memberships</h2>
+				<li><a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a></li>
+				<li><a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a></li>
+				<li><a href="https://georgiagrown.com/">Georgia Grown</a></li>
+				<li><a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a></li>
+	    	</div>
 	    </div>
 	 	</section>
 	 	<section class="media">
@@ -169,12 +176,10 @@
     			<img src="images/hemi_27.jpg" class="row-2">
     			<img src="images/hemi_24.jpg">
     			<img src="images/hemi_21.jpg">
-
 	  		</div>
 	  	</section>
 	</main>	
 	<div id="myModal" class="modal">
-
   <!-- Modal content -->
 	 <div class="modal-content">
 	    <span class="close">&times;</span>
