--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
+    <!-- 
+Made with love by:
+
+LL                                        BBBB                 tt
+LL       aaa    uu  uu  r rrr   aaaa      BB  B  uu  uu  ii  tttttt  r rrr   aaa     ggg    ooo
+LL      a   a   uu  uu  rrr    a    a     BBBB   uu  uu        tt    rrr    a   a   g   g  o   o
+LL      a   a   uu  uu  rr     a    a     BB  B  uu  uu  ii    tt    rr     a   a   g   g  o   o
+LLLLL    aaa a   uuuu   rr      aaaa a    BBBB    uuuu   ii    tt    rr      aaa a   gggg   ooo   
+                                                                                        g
+                                                                                     ggg
+
+laurabuitrago.com -->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   	<title>HEMI Blueberry Farm</title>
+  	<meta name="description" content="Naturally Grown Georgia Blueberries | Come and pick your own!">
+  	<meta name="keywords" content="blueberry, blueberries, georgiagrown, pick your own">
+  	<meta name="author" content="Laura Buitrago">
 	<!-- Style Sheets -->
   	 <link href="css/splide.min.css" type="text/css" rel="stylesheet" />
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -21,10 +36,11 @@
 		<section>
 			<div>
 				<h1>Welcome!</h1>
-				<p> Hemi Blueberry Farm is a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017. HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
+				<p> Hemi Blueberry Farm is a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.</p> 
+				<p>HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
     			<p>Owners: Hector Buitrago and Michele Lamassonne</p>
 				<p>We produce the freshest and most delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
-				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Butte, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
+				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Beauty, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
 			</div>
 		</section>
 	</header>
