--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ laurabuitrago.com -->
 				<p>HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
     			<p>Owners: Hector Buitrago and Michele Lamassonne</p>
 				<p>We produce the freshest and most delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
-				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Titan, and Krewer - and four types of Muscadine grapes: Black Jumbo, Black Beauty, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
+				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Krewer and Titan (jumbo variety developed by University of GA) - and four types of Muscadine grapes: Black Jumbo, Black Beauty, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
 			</div>
 		</section>
 	</header>
@@ -135,20 +135,27 @@ laurabuitrago.com -->
 					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
 					<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
 					<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
-					
+
+				</div>
+				<div class="card">
+					<h2>What to know before you go</h2>
+					<hr/>
+					<li>Covid19 protocol (don’t come if you are sick, face masks encouraged, social distancing required & hand sanitizer available)</li>
+					<li>Wear closed to shoes – no sandals</li>
 					<li>Restrooms are available.</li>
 					<li>Refreshments can be purchased.</li>
 					<li>Children must be supervised at all times.</li>
 					<li>Bring containers or bags to take your fruit</li>
+					<li>Fruit sold by volume/weight at market rate</li>
 	    		</div>
-		    	<div class="card">
-					<h2>Farmers market we participate in:</h2>
-					<hr/>
-					<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
-		    	</div>
 				
 	    </article>
 	    <div class="products">
+	    	<div class="card">
+				<h2>Farmers market we participate in:</h2>
+				<hr/>
+				<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
+	    	</div>
 	    	<div class="card">
 				<h2>Products we sell</h2>
 				<hr/>
