--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ laurabuitrago.com -->
 				<p> Hemi Blueberry Farm is a family owned and operated farm established in 2015 in Greensboro, Georgia. Our first crop was in Late May 2017.</p> 
 				<p>HEMI Blueberry Farm is a registered trademark in the United States of America.</p>
     			<p>Owners: Hector Buitrago and Michele Lamassonne</p>
-				<p>We produce the freshest and most delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
+				<p>We produce the most fresh and delicious blueberries and we don’t use pesticides. We were proudly certified in 2020 as “Certified Naturally Grown” CNG.</p>
 				<p>We grow six varieties of Blueberries: Vernon, Legacy, Brightwell, Camellias, Krewer and Titan (jumbo variety developed by University of GA) - and four types of Muscadine grapes: Black Jumbo, Black Beauty, Bronze Magnolia Scuppernong and Bronze Old Fashioned.</p>
 			</div>
 		</section>
@@ -132,7 +132,7 @@ laurabuitrago.com -->
 		      		<hr/>
 					<p>Pick your own starts in Late May of every year.</p>
 					<p>Picking is possible Tuesday thru Sunday, from 10 am to 7 pm but please call ahead 770-403-7018, as picking is by appointment only.</p>
-					<p>Blackberries, blueberries, and muscadine grapes, are available to be picked during their season:</p>
+					<p>Blackberries, blueberries, and muscadine grapes are available to be picked during their season:</p>
 					<p>Blueberries and Blackberries - Late May to July 15 (approx.)</p>
 					<p>Muscadines grapes - August 15 - September 15 (approx.)</p>
 
