adding more images to grid

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@ laurabuitrago.com -->
 	           			</li>	
 	           			<li class="splide__slide">
 	          				<img data-splide-lazy="/images/hemi_14.jpg" src="/images/hemi_14.jpg"/>
+	           			</li>
+	           			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_05.jpg" src="/images/hemi_14.jpg"/>
 	           			</li>	        		
 	           		</ul>
 	     		</div>
@@ -120,7 +123,10 @@ laurabuitrago.com -->
 	           			</li>	
 	           			<li class="splide__slide">
 	          				<img data-splide-lazy="/images/hemi_14.jpg" src="/images/hemi_14.jpg"/>
-	           			</li>	        		
+	           			</li>
+	           			<li class="splide__slide">
+	          				<img data-splide-lazy="/images/hemi_05.jpg" src="/images/hemi_14.jpg"/>
+	           			</li>		        		
 	           		</ul>
 	      		</div>
 	    	</div>
@@ -198,11 +204,16 @@ laurabuitrago.com -->
     			<img src="images/Hector 2.jpg" alt="Hector Buitrago" class="column-2 row-2">
 				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
-    			<img src="images/20160410_183415.jpeg" class="column-2">
+    			<img src="images/hemi_23.jpeg">
+    			<img src="images/hemi_20.jpeg">
+    			<img src="images/hemi_15.jpeg">
     			<img src="images/hemi_26.jpg" class="column-2">
     			<img src="images/hemi_27.jpg" class="row-2">
     			<img src="images/hemi_24.jpg">
     			<img src="images/hemi_21.jpg">
+    			<img src="images/hemi_01.jpg">
+    			<img src="images/blueberrybuds.jpg">
+    			<img src="images/blue6.jpg">
 	  		</div>
 	  	</section>
 	</main>	
