--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@ laurabuitrago.com -->
     			<img src="images/Hector 2.jpg" alt="Hector Buitrago" class="column-2 row-2">
 				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
-    			<img src="images/hemi_23.jpeg">
-    			<img src="images/hemi_20.jpeg">
-    			<img src="images/hemi_15.jpeg">
+    			<img src="images/hemi_23.jpg">
+    			<img src="images/hemi_20.jpg">
+    			<img src="images/hemi_15.jpg">
     			<img src="images/hemi_26.jpg" class="column-2">
     			<img src="images/hemi_27.jpg" class="row-2">
     			<img src="images/hemi_24.jpg">
     			<img src="images/hemi_21.jpg">
     			<img src="images/hemi_01.jpg">
-    			<img src="images/blueberrybuds.jpg">
+    			<img src="images/blueberrybuds.jpeg">
     			<img src="images/blue6.jpg">
 	  		</div>
 	  	</section>
