--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@ laurabuitrago.com -->
     			<img src="images/hemi_24.jpg">
     			<img src="images/hemi_21.jpg">
     			<img src="images/hemi_01.jpg">
-    			<img src="images/blueberrybuds.jpeg">
-    			<img src="images/blue6.jpg">
+    			<img src="images/blueberrybuds.jpg">
+    			<img src="images/blue6.jeg">
 	  		</div>
 	  	</section>
 	</main>	
