--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ laurabuitrago.com -->
 				<img src="images/Hemi - 13 of 25.png">			
     			<img src="images/Hemi - 3 of 25.png" alt="Planting at the farm">
     			<img src="images/hemi_23.jpg">
-    			<img src="images/hemi_20.jpg">
+    			<img src="images/hemi_20.jpg" class="column-2">
     			<img src="images/hemi_15.jpg">
     			<img src="images/hemi_26.jpg" class="column-2">
     			<img src="images/hemi_27.jpg" class="row-2">
