open all links in new windows

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ laurabuitrago.com -->
 	    	<div class="card">
 				<h2>Farmers market we participate in:</h2>
 				<hr/>
-				<li><a href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
+				<li><a target="_blank" href="https://vharmonycrossing.com/">Harmony Crossing Farmer’s Market, Lake Oconee - Saturday mornings starting end of May</a></li>
 	    	</div>
 	    	<div class="card">
 				<h2>Products we sell</h2>
@@ -180,16 +180,16 @@ laurabuitrago.com -->
 	    	<div class="card">
 				<h2>Certifications and Memberships</h2>
 				<hr/>
-				<li><a href="https://www.cngfarming.org/https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a></li>
-				<li><a href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a></li>
-				<li><a href="https://georgiagrown.com/">Georgia Grown</a></li>
-				<li><a href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a></li>
+				<li><a target="_blank" href="https://www.cngfarming.org/">Proudly certified in 2020 as “Certified Naturally Grown”</a></li>
+				<li><a target="_blank" href="https://greeneccoc.org/">Greene Country Chamber of Commerce</a></li>
+				<li><a target="_blank" href="https://georgiagrown.com/">Georgia Grown</a></li>
+				<li><a target="_blank" href="http://www.pickyourown.org/GA-AtlantaEast-SE.htm">PickYourOwn.org</a></li>
 	    	</div>
 	    </div>
 	 	</section>
 	 	<section class="media">
 	 		<div>
-				<h2>Check out an essay and portrait about Hemi Blueberry farm <a href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
+				<h2>Check out an essay and portrait about Hemi Blueberry farm <a target="_blank" href="https://www.chamberlainlockett.com/planting-seed">here</a></h2>
 				<div ><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Q1EZuXHVrJY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	 		</div>
 	 		<div>
