--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ laurabuitrago.com -->
     			<img src="images/hemi_02.jpg">
     			<img src="images/hemi_01.jpg">
     			<img src="images/blueberrybuds.jpg">
-    			<img src="images/blue6.jeg">
+    			<img src="images/blue6.jpeg">
 	  		</div>
 	  	</section>
 	</main>	
