--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ laurabuitrago.com -->
 					<h2>What to know before you go</h2>
 					<hr/>
 					<li>Covid19 protocol (don’t come if you are sick, face masks encouraged, social distancing required & hand sanitizer available)</li>
-					<li>Wear closed to shoes – no sandals</li>
+					<li>Wear closed toed shoes – no sandals</li>
 					<li>Restrooms are available.</li>
 					<li>Refreshments can be purchased.</li>
 					<li>Children must be supervised at all times.</li>
@@ -213,7 +213,7 @@ laurabuitrago.com -->
     			<img src="images/hemi_02.jpg">
     			<img src="images/hemi_01.jpg">
     			<img src="images/blueberrybuds.jpg">
-    			<img src="images/blue6.jpeg">
+    			<img src="images/blue6.jpeg" class="column-2">
 	  		</div>
 	  	</section>
 	</main>	
