--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ laurabuitrago.com -->
 				<h2>Products we sell</h2>
 				<hr/>
 	    		<div class="media">
-					<li>Fresh Blueberries (end of May thru July)</li>
+					<li>Fresh Blueberries (late May thru July)</li>
 					<li>Fresh Muscadine Grapes (Aug-Sept)</li>
 					<li>Fresh Blackberries (May - Aug)</li>
 					<li>Frozen Blueberries</li>
